# MoonOS

./: .clang-format  .gitignore  BUILD.gn  link64.ld  make_toolchain.sh  meson.build  meson_options.txt  moon-crossfile.txt
.vim/: coc-settings.json
algorithm/: array.hpp  meson.build
algorithm/list/: list.hpp
algorithm/test/: list_test.cc  test_main.cc
gn/: BUILD.gn  BUILDCONFIG.gn
gn/toolchain/: BUILD.gn
grub/: grub.cfg
include/: limits123.h  stdarg123.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h
include/moonos/: apic.h  elf.h  interupt.h  ioport.h  kprintf.h  memory.h  time.h
include/moonos/apic/: io_apic.h  local_apic.h
include/moonos/arch/: tty.h  vga.h
include/moonos/cpu/: acpi.h  cpuid.h
include/moonos/memory/: balloc.h  buddy.h  misc.h  mm.h  paging.h  slab.h
include/moonos/pci/: pci.h
include/moonos/pci/driver/vmware/svga/: svga.h  svga_reg.h
include/moonos/ramfs/: initramfs.h  ramfs.h
include/moonos/thread/: condition.h  lock.h  mutex.h  thread.h
include/moonos/util/: list.h
include/multiboot/: multiboot.h  multiboot2.h
initramfs/: BUILD.gn  README.md  make_initrd.py
kernel/: BUILD.gn  kmain.c  kprintf.c  meson.build
kernel/apic/: io_apic.c  local_apic.c
kernel/arch/x86_64/: apic.c  entry.S  interrupt.c  ints.S  time.c  tty.c
kernel/cpu/: acpi.c  cpu_detect.c  cpuid.S
kernel/include/moon/: acpi.hpp  hal.hpp  idt.hpp  io.hpp  memory.h  paging.hpp  timer.hpp  tty.hpp
kernel/include/multiboot/: multiboot.h
kernel/libc/stdio/: snprintf.c  sprintf.c  vsnprintf.c  vsprintf.c
kernel/libc/stdlib/: atoi.c
kernel/libc/string/: memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c
kernel/memory/: balloc.c  buddy.c  misc.c  mm.c  paging.c  slab.c
kernel/pci/: pci.c
kernel/pci/driver/vmware/svga/: svga.c
kernel/ramfs/: initramfs.c  ramfs.c
kernel/src/: acpi.cc  hal.cc  idt.cc  io.cc  kprintf.cc  kprintf.hpp  main.cc  paging.cc  runtime.cc  timer.cc  tty.cc
kernel/src/arch/x86_64/: entry.S  idt.S
kernel/src/balloc/: balloc.cc  balloc.hpp  balloc_test.cc  meson.build
kernel/thread/: condition.c  lock.c  mutex.c  switch.S  thread.c
kernel/util/: list.c
klibc/: meson.build
klibc/include/: stdio.h  stdlib.h  string.h
klibc/src/stdio/: snprintf.c  sprintf.c  vsnprintf.c  vsprintf.c
klibc/src/stdlib/: atoi.c
klibc/src/string/: memchr.c  memcmp.c  strcoll.c  strlen.c
loader/: BUILD.gn  entry.S
toolchain/: make_toolchain.sh
tools/: genints.py  gn_to_cmake.py
