executable("kernel") {
    link_file = rebase_path("../link64.ld")


    configs = []

    ldflags = [
        "-T",
        link_file,
        "-lgcc",
        "-ffreestanding",
        "-nostdlib"
    ]

    cflags = [
        "-nostdlib",
        "-nostdinc",
        "-fno-builtin",
        "-fno-stack-protector",
        "-nostartfiles",
        "-nodefaultlibs",
        "-Wall",
        "-Wextra",
        "-finline-functions"
    ]


    sources = [
        # libc
        "libc/string/memcmp.c",
        "libc/string/memchr.c",
        "libc/string/memcpy.c",
        "libc/string/memmove.c",
        "libc/string/memset.c",
        "libc/string/strcat.c",
        "libc/string/strchr.c",
        "libc/string/strcmp.c",
        "libc/string/strcoll.c",
        "libc/string/strcpy.c",
        "libc/string/strlen.c",
        "libc/stdio/snprintf.c",
        "libc/stdio/sprintf.c",
        "libc/stdio/vsnprintf.c",
        "libc/stdio/vsprintf.c",
        "libc/stdlib/atoi.c",
        # kernel
        "kmain.c",
        "arch/x86_64/tty.c"
    ]

    include_dirs = [
        "//include"
    ]
}
