executable("kernel") {
    link_file = rebase_path("../link64.ld")


    configs = []

    ldflags = [
        "-T",
        link_file,
        "-lgcc",
        "-ffreestanding",
        "-nostdlib",
        "-fno-builtin",
        "-z",
        "max-page-size=0x1000"
    ]

    cflags = [
        "-mno-red-zone",
        "-mno-mmx",
        "-mno-sse",
        "-mno-sse2",
        "-ffreestanding",
        "-mcmodel=kernel",
        "-fno-pic",
        "-Wall",
        "-Wextra",
        "-Wframe-larger-than=1024",
        "-Wstack-usage=1024",
        "-Wno-unknown-warning-option",
        "-nostdlib",
        "-fno-builtin",
        "-m64",
    ]


    sources = [
        # libc
        "libc/string/memcmp.c",
        "libc/string/memchr.c",
        "libc/string/memcpy.c",
        "libc/string/memmove.c",
        "libc/string/memset.c",
        "libc/string/strcat.c",
        "libc/string/strchr.c",
        "libc/string/strcmp.c",
        "libc/string/strcoll.c",
        "libc/string/strcpy.c",
        "libc/string/strlen.c",
        "libc/stdio/snprintf.c",
        "libc/stdio/sprintf.c",
        "libc/stdio/vsnprintf.c",
        "libc/stdio/vsprintf.c",
        "libc/stdlib/atoi.c",
        # kernel
        "kmain.c",
        "kprintf.c",
        "arch/x86_64/entry.S",
        "arch/x86_64/tty.c",
        "arch/x86_64/interrupt.c",
        "arch/x86_64/ints.S",
        "arch/x86_64/time.c",
        "apic/local_apic.c",
        "apic/io_apic.c",
        "memory/balloc.c",
        "memory/paging.c",
        "memory/buddy.c",
        "memory/slab.c",
        "thread/thread.c",
        "thread/switch.S",
        "util/list.c",
        "cpu/acpi.c",
        "cpu/cpuid.S",
        "cpu/cpu_detect.c",
    ]

    include_dirs = [
        "//include"
    ]
}
